--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "grunt": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-execute": "^0.2.2"
+  },
+  "dependencies": {
+    "lodash": "^4.14.1"
   }
 }
