--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playground",
+  "name": "node-demo",
   "version": "1.0.0",
   "description": "Environment for tech interviews",
   "main": "index.js",
