--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^3.5.0",
     "grunt": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-execute": "^0.2.2"
+    "grunt-execute": "^0.2.2",
+    "grunt-mocha-test": "^0.12.7",
+    "mocha": "^3.0.1"
   },
   "dependencies": {
     "lodash": "^4.14.1"
